<resources>
    <string name="comment_email">Email</string>
    <string name="comment_body">Comment</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="desc_logo">email image for login</string>
    <string name="desc_email">email image for login</string>
    <string name="desc_password">password image for login</string>
    <string name="choose_language">Choose Language</string>
    <string name="english_language">English</string>
    <string name="chinese_language">中文</string>
    <string name="noti_01">Notification</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="you_have_registered_please_log_in">You have registered. Please Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="identification_number">Identification Number</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="check">check</string>
    <string name="input_identification_number">Input Identification Number</string>
    <string name="existing_customer">Existing Customer</string>
    <string name="new_customer">New Customer</string>
    <string name="home_address">Home Address</string>
    <string name="select_capital">Select Capital</string>
    <string name="select_district">Select District</string>
    <string name="input_detailed_address">Input Detailed Address</string>
    <string name="personal_information">Personal Information</string>
    <string name="capital">Capital</string>
    <string name="district">District</string>
    <string name="village">Village</string>
    <string name="select_village">Select Village</string>
    <string name="job_type">Job Type</string>
    <string name="select_job_type">Select Job Type</string>
    <string name="subimit">subimit</string>
    <string name="notification">Notification</string>
    <string name="subject">Subject</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="counselling_type">Counselling Type</string>
    <string name="contents">Contents</string>
    <string name="answer_by_bnkc">Answer by BNKC</string>
    <string name="faq">FAQ</string>
    <string name="ask_bnkc">Ask BNKC</string>
    <string name="policy">Policy</string>
    <string name="perm_01">Photo, media, file access</string>
    <string name="perm_02">Access to address book</string>
    <string name="perm_03">Phone call and management</string>
    <string name="perm_04">Take a photo and record a video</string>
    <string name="perm_05">Unable to open bizplay corporate card app. Try again after change setting</string>
    <string name="perm_06">Unable to attach an image. Try again after change setting</string>
    <string name="language_01" translatable="false">ខ្មែរ</string>
    <string name="language_02" translatable="false">English</string>
    <string name="language_03">English</string>
    <string name="curr_usd">USD</string>
    <string name="khr">KHR</string>
    <string name="khr_format">%s KHR</string>
    <string name="usd_format">%s USD</string>
    <string name="usd">USD</string>
    <string name="months">%s Months</string>
    <string name="comm_notification">Notification</string>
    <string name="comm_cancel">Cancel</string>
    <string name="comm_ok">OK</string>
    <string name="comm_setting">Setting</string>
    <string name="comm_confirm">Confirm</string>
    <string name="comm_update_now">Update Now</string>
    <string name="comm_sign_up">Sign Up</string>
    <string name="comm_login">login</string>
    <string name="comm_continue">Continue</string>
    <string name="comm_next">Next</string>
    <string name="comm_register_again">Register Again</string>
    <string name="comm_setup_new_pin">Setup NewPin</string>
    <string name="comm_try_again">Try Again</string>
    <string name="comm_reset_pin">Reset Pin</string>
    <string name="comm_apply_loan">Apply Loan</string>
    <string name="comm_error_internet_connection">Please check your internet connection and try again.</string>
    <string name="comm_error_during_process">A temporary error has occurred due to system check. Please try again another time.</string>
    <string name="comm_error">Error</string>
    <string name="comm_submit">Submit</string>
    <string name="comm_go_home">Go Home</string>
    <string name="comm_submit_document">Submit Document</string>
    <string name="comm_select">Select</string>
    <string name="submit_document_success">Document is Submitted</string>
    <string name="submit_document_success_smg">BNK will review your document\nand get back to you soon</string>
    <string name="submit_document_failed">Document is Not Submitted</string>
    <string name="uploading">Uploading</string>
    <string name="card_uploaded">Document Uploaded</string>
    <string name="my_loan_menu_001">Application</string>
    <string name="my_loan_menu_002">Screening</string>
    <string name="my_loan_menu_003">Result</string>
    <string name="main_bottom_menu1">My Loan</string>
    <string name="main_bottom_menu2">Loan Service</string>
    <string name="main_bottom_menu3">Find Office</string>
    <string name="main_subtitle_001">My Loan Request</string>
    <string name="main_subtitle_002">Lease in Use</string>
    <string name="loan_type_001">MICRO LEASE</string>
    <string name="loan_type_002">SMALL LEASE</string>
    <string name="loan_type_003">MEDIUM LEASE</string>
    <string name="main_content_004">ADD NEW LEASE SERVICE</string>
    <string name="main_content_005">Balance of Lease</string>
    <string name="main_content_006">Coming Repayment Date</string>
    <string name="main_content_007">Total Payment</string>
    <string name="main_content_009">BILL PAYMENT</string>
    <string name="main_content_010">MANAGEMENT</string>
    <string name="main_content_011"><font color="#00695C">Download BNK Mobile</font>\nand Take Loan Now.</string>
    <string name="my_laon_request_001">Progress</string>
    <string name="my_laon_request_002">Loan Amount</string>
    <string name="my_laon_request_003">Loan Term</string>
    <string name="my_laon_request_004">Date of Application</string>
    <string name="my_laon_request_005">SUBMIT DOC</string>
    <string name="my_laon_request_006">Call Center</string>
    <string name="my_loan_request_007">\u0020Months</string>
    <string name="my_loan_request_008">Weekday 09:00 - 18:00</string>
    <string name="my_loan_request_009">Result of Application</string>
    <string name="my_loan_request_010">Scheduled Date of Visit</string>
    <string name="my_loan_request_011">Branch Name</string>
    <string name="my_loan_request_012">The Person in Charge</string>
    <string name="my_loan_request_013">Reasons</string>
    <string name="my_loan_request_014">Approve</string>
    <string name="my_loan_request_015">Reject</string>
    <string name="my_loan_request_016">Approval Amount</string>
    <string name="nav_content_001">Customer ID</string>
    <string name="nav_content_002">NOTICE</string>
    <string name="nav_content_003">CS/CENTER</string>
    <string name="nav_content_004">Language</string>
    <string name="nav_content_005">Facebook BNKC Capital Lao Leasing</string>
    <string name="nav_content_006">Company Profile</string>
    <string name="nav_content_007">Settings</string>
    <string name="nav_content_008">ភាសា</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_01">Step 1</string>
    <string name="sign_up_02">Step 2</string>
    <string name="sign_up_03">OTP Verification</string>
    <string name="sign_up_04">Enter your phone number and we\u0027ll send you a confirmation code.</string>
    <string name="sign_up_05">OTP Code</string>
    <string name="sign_up_06">Incorrect</string>
    <string name="sign_up_07">Didn\u0027t get the code? \u0020 </string>
    <string name="sign_up_08">RESEND</string>
    <string name="sign_up_09">CONTINUE</string>
    <string name="sign_up_10">Personal Information</string>
    <string name="sign_up_11">Family Name</string>
    <string name="sign_up_12">Family Name in Latin</string>
    <string name="sign_up_13">Given Name</string>
    <string name="sign_up_14">Given Name in Latin</string>
    <string name="sign_up_15">Date of Birth</string>
    <string name="sign_up_16">DD-MM-YYYY (31-01-1985)</string>
    <string name="sign_up_17">Gender</string>
    <string name="sign_up_18">Male</string>
    <string name="sign_up_19">Female</string>
    <string name="sign_up_20">Next</string>
    <string name="sign_up_21">I agree to BNKC\'s\u0020 Terms and Conditions</string>
    <string name="sign_up_22">Terms and Conditions</string>
    <string name="sign_up_23">Correct</string>
    <string name="sign_up_24">You Haven\u0027t \nSigned Up Yet</string>
    <string name="sign_up_25">Phone number hasn\u0027t signed up\nfor BNK Account. Please sign up.</string>
    <string name="sign_up_26">You Already Signed Up</string>
    <string name="sign_up_27">Phone number has already\nregistered. Please login using PIN.</string>
    <string name="sign_up_28">I agree to BNKC\'s Terms and Conditions </string>
    <string name="login_01">Log In</string>
    <string name="sign_up_29">Terms and Conditions</string>
    <string name="sign_up_30">Recommender ID</string>
    <string name="sign_up_31">7-Digit Number</string>
    <string name="sign_up_32"><i>(Optional)</i></string>
    <string name="requirement_documents">Requirement Documents</string>
    <string name="faqs">FAQs</string>
    <string name="_1_what_is_the_interest_rate_per_month"> What is the Interest Rate per Month?</string>
    <string name="negotiation">Negotiation.</string>
    <string name="_2_can_i_borrow_without_collateral"> Can I borrow without collateral?</string>
    <string name="yes_you_can_borrow_without_collateral_depend_non_the_borrowing_amount">Yes. You can borrow without collateral depend on the borrowing amount.</string>
    <string name="_3_how_much_income_do_i_need_per_month_to_be_nable_to_borrow_money"> How much income do I need per month to be able to borrow money?</string>
    <string name="as_long_as_you_have_income_your_borrowing_namount_will_be_studied_to_be_able_to_provide_nto_you">As long as you have income, your borrowing amount will be studied to be able to provide to you.</string>
    <string name="n_1">1.</string>
    <string name="n_2">2.</string>
    <string name="n_3">3.</string>
    <string name="n_4">4.</string>
    <string name="n_5">5.</string>
    <string name="bullet_point">•</string>
    <string name="_4_what_documents_are_needed"> What documents are needed?</string>
    <string name="id_card_or_family_book_or_residence_book_or_pay_slip_or_other_legal_documents_etc">ID card or Family book or residence book or pay slip, or other legal documents etc.</string>
    <string name="_5_when_can_i_receive_the_money_after_applying_loan"> When can I receive the money after applying loan?</string>
    <string name="the_processing_would_take_1day_4days_depend_on_loan_size">the processing would take 1day-4days depend on loan size</string>
    <string name="copy_of_your_id_card">Copy of your ID Card</string>
    <string name="copy_of_family_book">Copy of family book</string>
    <string name="salary_slip_or_income_statement">Salary slip or income statement</string>
    <string name="dlg_10">Payment Success</string>
    <string name="dlg_11">Payment Success\n Message.</string>
    <string name="dlg_12">CLOSE</string>
    <string name="dlg_16">Log Out</string>
    <string name="dlg_17">Are you sure to log out?</string>
    <string name="dlg_18">CANCEL</string>
    <string name="dlg_19">LOG OUT</string>
</resources>