<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <com.mobile.bnk.comm.view.ShadowLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        app:shadowColor="@color/color_1590a4ae_shadow"-->
<!--        app:shadowDx="0dp"-->
<!--        app:shadowDy="0dp"-->
<!--        app:shadowRadius="15dp"-->
<!--        android:translationY="-10dp"-->
<!--        app:shadowShape="rectangle"-->
<!--        app:shadowSide="left|bottom|right">-->

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/round_stroke_e1e5ec_solid_ffffff_corner_10"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:translationY="-10dp"
            android:padding="15dp">
            <LinearLayout
                android:id="@+id/ll_faqs"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_acc_number_ico"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/faqs"
                    android:layout_height="wrap_content"
                    style="@style/font15_263238_medium"/>
                <ImageView
                    android:id="@+id/iv_faqs"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_unfold_ico"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_faqs_des"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:background="@color/color_eef5f8"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/n_1"
                        android:layout_height="wrap_content"
                        style="@style/font15_263238_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/_1_what_is_the_interest_rate_per_month"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/negotiation"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="22dp"
                    android:layout_height="wrap_content"
                    style="@style/font15_90a4ae_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/n_2"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        style="@style/font15_263238_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/_2_can_i_borrow_without_collateral"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/yes_you_can_borrow_without_collateral_depend_non_the_borrowing_amount"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="22dp"
                    android:layout_height="wrap_content"
                    style="@style/font15_90a4ae_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/n_3"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        style="@style/font15_263238_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/_3_how_much_income_do_i_need_per_month_to_be_nable_to_borrow_money"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/as_long_as_you_have_income_your_borrowing_namount_will_be_studied_to_be_able_to_provide_nto_you"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="22dp"
                    android:layout_height="wrap_content"
                    style="@style/font15_90a4ae_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/n_4"
                        android:layout_height="wrap_content"
                        style="@style/font15_263238_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/_4_what_documents_are_needed"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/id_card_or_family_book_or_residence_book_or_pay_slip_or_other_legal_documents_etc"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="22dp"
                    android:layout_height="wrap_content"
                    style="@style/font15_90a4ae_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/n_5"
                        android:layout_height="wrap_content"
                        style="@style/font15_263238_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/_5_when_can_i_receive_the_money_after_applying_loan"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/the_processing_would_take_1day_4days_depend_on_loan_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="22dp"
                    android:layout_height="wrap_content"
                    style="@style/font15_90a4ae_medium"/>

            </LinearLayout>
        </LinearLayout>

<!--    </com.mobile.bnk.comm.view.ShadowLayout>-->
</layout>