<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.bnkc.sourcemodule.ui.ShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shadowColor="@color/color_1590a4ae_shadow"
        app:shadowDx="0dp"
        app:shadowDy="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:shadowRadius="5dp"
        app:shadowShape="rectangle"
        app:shadowSide="all">

        <LinearLayout

            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/round_stroke_e1e5ec_solid_ffffff_corner_10"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <LinearLayout
                android:id="@+id/ll_requirement_document"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_acc_number_ico"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/requirement_documents"
                    android:layout_height="wrap_content"
                    style="@style/font15_263238_medium"/>
                <ImageView
                    android:id="@+id/iv_doc"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_unfold_ico"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_document_des"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:background="@color/color_eef5f8"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/bullet_point"
                        android:layout_height="wrap_content"
                        style="@style/font15_263238_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/copy_of_your_id_card"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/bullet_point"
                        android:layout_height="wrap_content"
                        style="@style/font15_263238_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/copy_of_family_book"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/bullet_point"
                        android:layout_height="wrap_content"
                        style="@style/font13_263238_medium_flex"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/salary_slip_or_income_statement"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        style="@style/font15_263238_medium"/>
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>

    </com.bnkc.sourcemodule.ui.ShadowLayout>
</layout>